Fix title/description spacing on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -266,6 +266,7 @@
   .description {
     padding: 0.8rem 0 0 0;
     font-size: 1.25rem;
+    margin: 1rem 0 0;
   }
 
 
